# rgb

./: .dockerignore  .gitignore  .gitmodules  .python-version  Dockerfile  Dockerfile-cpp  Dockerfile-gravity  Dockerfile-python  Makefile  README.md  basematrix.Dockerfile  gravity.Dockerfile  gravity.py  moderngl-notes  pyproject.toml  requirements.txt  rgb.py  rgbstrip.Dockerfile  setup.cfg
infra/roles/common/files/aspects/rgb/: Makefile  basematrix.Dockerfile  moderngl-requirements.txt  tapthebeat.Dockerfile
src/rgb/: basematrix.py  constants.py  controlloop.py  form.py  gravity.py  hzel_samplebase.py  imaqt.py  keys.py  maingl.py  mainmatrix.py  mainrgbstrip.py  maintk.py  messages.py  orbit.py  parameter_tuner.py  rgb.py  rgb1d.py  rgb2d.py  shape.py  stars.py  stripes.py  timer.py  utilities.py  wave.py
src/rgb/display/: basedisplay.py  hzelmatrix.py  ledstrip.py  tkcanvas.py
src/rgb/displays/: rgbstrip.py
src/rgb/form/: audio_spectrogram.py  baseform.py  basenoise.py  cells.py  chase.py  gravity.py  iconography.py  keyawareform.py  keys.py  knoise.py  lines.py  orbit.py  random_shape.py  randomobject.py  stars.py  stripes.py  sustainobject.py  timer.py  transitions.py  voronoi_diagram.py  wave.py
src/rgb/forms/: audio_spectrogram.py  chase.py  gravity.py  keys.py  lines.py  orbit.py  shape.py  stars.py  timer.py  wave.py
src/rgb/opengl/: maingl.py
src/rgb/resources/: japanese6000.txt
src/rgb/tests/: test_rgb.py
src/sonic/: spectrogram.py
src/tests/: test_all.py  test_voronoi.py
tests/: __init__.py  context.py  test_gravity.py  test_gravity_math.py  test_ipc.py  test_keys.py  test_orbit.py  test_rgb.py  test_shape.py  test_timer_render.py  test_wave.py
tests_disabled/tests/: test_icon.py  test_keys.py  test_orbit.py  test_timer.py
(+18 files in other folders)
