[metadata]
name = rgb-kevinkatz
version = 0.0.1
author = Kevin Katz
# author_email = author@example.com
description = RGB mechanism.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kevcmk/rgb.git
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
# we can use the find: directive to automatically discover all packages and subpackages and options.packages.find to specify the package_dir to use
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src